--- a/views/admin/restaurants.pug
+++ b/views/admin/restaurants.pug
@@ -2,4 +2,28 @@ extends ../layouts/main.pug
 
 
 block body
-  div Admin Restaurants
+  h1 餐廳後台
+  a(href='/admin/restaurants/create')
+    button.btn.btn-primary(type='button') New Restaurant
+  br
+  br
+  table.table
+    thead.thead-dark
+      tr
+        th(scope='col') #
+        th(scope='col') Name
+        th(scope='col') #
+    tbody
+      each restaurant in restaurants
+        tr
+          th(scope='row') #{restaurant.id}
+          td #{restaurant.name}
+          td
+            button.btn.btn-link(type='button')
+              a(href='/admin/restaurants/'+restaurant.id)
+                | Show
+            button.btn.btn-link(type='button')
+              a(href='/admin/restaurants/'+restaurant.id+'/edit')
+                | Edit
+            form(action='/admin/restaurants/'+restaurant.id+'?_method=DELETE', method='POST', style='display: inline;')
+              button.btn.btn-link(type='submit') Delete
