--- a/views/admin/restaurant.pug
+++ b/views/admin/restaurant.pug
@@ -5,6 +5,7 @@ block body
   .row
     .col-md-12
       h1 #{restaurant.name}
+      img.img-responsive.center-block(src=restaurant.image, style='width: 250px;margin-bottom: 25px;')
     .col-md-4
       br
       .well
