--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -10,6 +10,10 @@ html
       a.navbar-brand(href='/') 餐廳評論網
       #navbarsExampleDefault.navbar-collapse.offcanvas-collapse
         ul.navbar-nav.mr-auto
+          if user
+            if user.isAdmin
+              li.nav-item.active
+                a.nav-link(href='/admin/restaurants') 後台
         div
           //- if user.isAdmin
           //-   a(href='/admin', style='color: white;margin-right: 10px;') Admin 後台
@@ -29,6 +33,9 @@ html
             .alert.alert-danger(role='alert', style='margin: 30px 0 ;') #{error_messages}
           block body
 
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
+    script(src="https://code.jquery.com/jquery-3.4.1.js"
+          integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+          crossorigin="anonymous")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js', integrity='sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy', crossorigin='anonymous')
+    block scripts
