--- a/views/admin/restaurants.pug
+++ b/views/admin/restaurants.pug
@@ -18,12 +18,14 @@ block body
       tr
         th(scope='col') #
         th(scope='col') Name
+        th(scope='col') Category
         th(scope='col') #
     tbody
       each restaurant in restaurants
         tr
           th(scope='row') #{restaurant.id}
           td #{restaurant.name}
+          td #{restaurant.Category.name}
           td
             button.btn.btn-link(type='button')
               a(href='/admin/restaurants/'+restaurant.id)
