--- a/views/restaurant.pug
+++ b/views/restaurant.pug
@@ -23,5 +23,24 @@ block body
       p #{restaurant.description}
     hr
   br
+  h3 所有評論：
+    each comment in restaurant.Comments
+      if user.isAdmin
+        form(action=`/comments/${comment.id}?_method=DELETE`, method='POST', style='float: right;')
+          button.btn.btn-danger(type='submit') Delete
+      blockquote.blockquote.mb-0
+        h4
+          a(href=`/users/${comment.User.id}`) #{comment.User.name}
+        p #{comment.text}
+        footer.blockquote-footer #{moment(comment.createdAt).fromNow()}
+      hr
+  br
+  form(action='/comments', method='POST')
+    .form-group
+      label(for='text') 留下評論：
+      textarea#text.form-control(name='text', rows='3')
+      input(type='hidden', name='restaurantId', value=restaurant.id)
+      button.btn.btn-primary(type='submit') Submit
+  br
   br
   a(href='javascript:history.back()') 回上一頁
