--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -10,16 +10,13 @@ html
       a.navbar-brand(href='/') 餐廳評論網
       #navbarsExampleDefault.navbar-collapse.offcanvas-collapse
         ul.navbar-nav.mr-auto
+        div
           if user
             if user.isAdmin
-              li.nav-item.active
-                a.nav-link(href='/admin/restaurants') 後台
-        div
-          //- if user.isAdmin
-          //-   a(href='/admin', style='color: white;margin-right: 10px;') Admin 後台
+              a(href='/admin', style='color: white;margin-right: 10px;') Admin 後台
           if user
             span(style='color: white;margin-right: 10px;') Hi, #{user.email}
-            a(href='/users/{{user.id}}', style='color: white;margin-right: 10px;') Profile
+            a(href=`/users/${user.id}`, style='color: white;margin-right: 10px;') Profile
             a(href='/logout')
               button.btn.btn-outline-success.my-2.my-sm-0 LogOut
     br
