--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -2,6 +2,12 @@ extends ./layouts/main.pug
 
 
 block body
+  ul.nav.nav-tabs
+    li.nav-item
+      a.nav-link.active(href='#') 首頁
+    li.nav-item
+      a.nav-link(href='/restaurants/feeds') 最新動態
+  br
   ul.nav.nav-pills
     li.nav-item
       if categoryId == ""
