Add view count to restaurant

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -13,7 +13,7 @@ block body
           |  #{restaurant.Comments.length}
         li
           |瀏覽次數:
-          |  
+          |  #{restaurant.viewCount}
         li
           |收藏數:
           |  
