--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -32,6 +32,13 @@ block body
                 | #{restaurant.name}
             span.badge.badge-secondary #{restaurant.categoryName}
             p.card-text #{restaurant.description}
+            if restaurant.isFavorited
+              form(action=`/favorite/${restaurant.id}?_method=DELETE`, method='POST')
+                button.btn.btn-danger(type='submit') 移除最愛
+            else
+              form(action=`/favorite/${restaurant.id}`, method='POST')
+                button.btn.btn-primary(type='submit') 加到最愛
+
   br
   br
   nav(aria-label='Page navigation example')
