--- a/views/restaurant.pug
+++ b/views/restaurant.pug
@@ -30,6 +30,13 @@ block body
         else
           form(action=`/favorite/${restaurant.id}`, method='POST')
             button.btn.btn-primary.mx-1(type='submit') 加到最愛
+        div.mx-1
+        if isLiked
+          form(action=`/like/${restaurant.id}?_method=DELETE`, method='POST')
+            button.btn.btn-danger(type='submit') Unlike
+        else
+          form(action=`/like/${restaurant.id}`, method='POST')
+            button.btn.btn-primary(type='submit') Like
   hr
   h3 所有評論：
     each comment in restaurant.Comments
