--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -7,6 +7,8 @@ block body
       a.nav-link.active(href='#') 首頁
     li.nav-item
       a.nav-link(href='/restaurants/feeds') 最新動態
+    li.nav-item
+      a.nav-link(href='/users/top') 美食達人
   br
   ul.nav.nav-pills
     li.nav-item
