--- a/views/feeds.pug
+++ b/views/feeds.pug
@@ -4,9 +4,13 @@ extends ./layouts/main.pug
 block body
   ul.nav.nav-tabs
     li.nav-item
-      a.nav-link(href='/restaurants') 首頁
+      a.nav-link(href='#') 首頁
     li.nav-item
       a.nav-link.active(href='/restaurants/feeds') 最新動態
+    li.nav-item
+      a.nav-link(href='/restaurants/top') TOP10 人氣餐廳
+    li.nav-item
+      a.nav-link(href='/users/top') 美食達人
   br
   br
   h1 最新動態
