Count favorited users during query and slice to 10

--- a/views/topRestaurants.pug
+++ b/views/topRestaurants.pug
@@ -36,7 +36,7 @@ block body
               .col-md-8
                 .card-body
                   h5.card-title  #{restaurant.name}
-                  span.badge.badge-secondary  收藏數: #{restaurant.followerCount}
+                  span.badge.badge-secondary  收藏數: #{restaurant.favorite_count}
                   p.card-text #{restaurant.description}
                   p.card-text
                   .row
